remove some stuff

--- a/appsettings.json
+++ b/appsettings.json
@@ -9,8 +9,8 @@
     "Nexmo.UserAgent": "myApp/1.0",
     "Nexmo.Url.Rest": "https://rest.nexmo.com",
     "Nexmo.Url.Api": "https://api.nexmo.com",
-    "Nexmo.api_key": "f5d01766",
-    "Nexmo.api_secret": "2608f77031b65a79"
+    "Nexmo.api_key": "*",
+    "Nexmo.api_secret": "*"
   },
   "MturkSms": {
     "RedisString": "127.0.0.1"
